# agentic-ml-app-quality-prediction

./: .env.example  .gitignore  README.md  pyproject.toml
agents/: graph.py  state.py
agents/nodes/: drift_monitor.py  experiment_designer.py  experiment_runner.py  human_approval.py  model_evaluator.py  registry_manager.py  report_writer.py  root_cause_analyst.py
agents/tools/: mlflow_tools.py  stats_tools.py
configs/: agent_config.yaml  best_params.yaml  model_config.yaml
infra/docker/: Dockerfile.mlflow
infra/scripts/: download_data.py  setup_mlflow_experiment.py  smoke_test.py  start_mlflow_local.sh
serving/: predict.py  server.py
training/evaluation/: evaluator.py
training/features/: feature_engineering.py
training/models/: xgboost_model.py
training/pipelines/: promote.py  train.py  tune.py
