[project]
name = "mlops-with-mlflow"
version = "0.1.0"
description = "Agentic MLOps pipeline for software quality prediction"
requires-python = ">=3.11"

dependencies = [
    # ML
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "scikit-learn>=1.4",
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.12",

    # MLflow
    "mlflow>=2.13",

    # LangGraph + LangChain
    "langgraph>=0.2",
    "langchain>=0.2",
    "langchain-anthropic>=0.1",
    "langchain-core>=0.2",

    # Anthropic
    "anthropic>=0.28",

    # Config & utilities
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",

    # Hyperparameter tuning
    "optuna>=3.6",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "training", "serving"]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
